--- a/src/com/fashionapp/views/components/ChatMessageActionsMenu.mxml
+++ b/src/com/fashionapp/views/components/ChatMessageActionsMenu.mxml
@@ -2,6 +2,11 @@
 <s:Group xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		 xmlns:s="library://ns.adobe.com/flex/spark"
 		 height="35">
+	<fx:Script>
+		<![CDATA[
+			
+		]]>
+	</fx:Script>
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
@@ -13,11 +18,11 @@
 	</s:Rect>
 	<s:HGroup height="100%" horizontalAlign="center" verticalAlign="middle">
 		<s:Label paddingBottom="5" paddingLeft="5" paddingRight="5" paddingTop="5" fontSize="11" color="0xFFFFFF" text="Copy" height="100%"
-				 textAlign="center"
+				 textAlign="center" click="this.dispatchEvent(new Event('copyChat',true));"
 				 verticalAlign="middle"/>
 		<s:BorderContainer height="100%" width="1" borderVisible="false" backgroundColor="0xFFFFFF"/>
 		<s:Label paddingBottom="5" paddingLeft="5" paddingRight="5" paddingTop="5" fontSize="11" color="0xFFFFFF" text="Delete" height="100%"
-				 textAlign="center"
+				 textAlign="center" click="this.dispatchEvent(new Event('deleteChat',true));"
 				 verticalAlign="middle"/>
 		<s:BorderContainer height="100%" width="1" borderVisible="false" backgroundColor="0xFFFFFF"/>
 		<s:Label paddingBottom="5" paddingLeft="5" paddingRight="5" paddingTop="5" fontSize="11" color="0xFFFFFF" text="Forward" height="100%"
