--- a/src/com/fashionapp/renderers/FromMessageRenderer.mxml
+++ b/src/com/fashionapp/renderers/FromMessageRenderer.mxml
@@ -53,7 +53,8 @@
 	</fx:Script>
 	
 	<s:BorderContainer borderVisible="false" width="100%"
-					   height="100%">
+					   height="100%"
+					   backgroundColor="green">
 		<s:Group height="100%" width="100%">
 			<s:layout>
 				<s:HorizontalLayout verticalAlign="middle" paddingLeft="0"/>
@@ -61,7 +62,7 @@
 			<!--<s:BorderContainer height="100%" width="2" 
 							   borderVisible="false"
 							   backgroundColor="0xCCCCCC"/>-->
-			<s:Group width="100%" height="100%" includeInLayout="{chat.type == 'text'}">
+			<s:Group width="100%" height="100%" includeInLayout="{chat.type.toUpperCase() == 'TEXT'}">
 				<s:layout>
 					<s:VerticalLayout paddingTop="{BasicUtil.getComponentPadding(20)}"
 									  paddingBottom="{BasicUtil.getComponentPadding(20)}"/>
