--- a/src/com/fashionapp/renderers/FromMessageRenderer.mxml
+++ b/src/com/fashionapp/renderers/FromMessageRenderer.mxml
@@ -53,8 +53,7 @@
 	</fx:Script>
 	
 	<s:BorderContainer borderVisible="false" width="100%"
-					   height="100%"
-					   backgroundColor="green">
+					   height="100%">
 		<s:Group height="100%" width="100%">
 			<s:layout>
 				<s:HorizontalLayout verticalAlign="middle" paddingLeft="0"/>
