--- a/src/com/fashionapp/renderers/ToMessageRenderer.mxml
+++ b/src/com/fashionapp/renderers/ToMessageRenderer.mxml
@@ -51,8 +51,7 @@
 		]]>
 	</fx:Script>
 	<s:BorderContainer borderVisible="false" width="100%"
-					   height="100%"
-					   backgroundColor="red">
+					   height="100%">
 		<s:Group height="100%" width="100%">
 			<s:layout>
 				<s:HorizontalLayout verticalAlign="middle" paddingLeft="{BasicUtil.getComponentPadding(160)}"/>
