--- a/src/com/fashionapp/renderers/FromMessageRenderer.mxml
+++ b/src/com/fashionapp/renderers/FromMessageRenderer.mxml
@@ -67,11 +67,11 @@
 									  paddingBottom="{BasicUtil.getComponentPadding(20)}"/>
 				</s:layout>
 				<s:HGroup verticalAlign="middle">
-					<s:Label text="AMIT"
+					<s:Label id="fullname" text="AMIT22"
 							 styleName="viewheading"
 							 fontWeight="bold"
 							 fontSize="{BasicUtil.getFontSize(21)}"/>
-					<s:Label text="2:07 PM" fontSize="{BasicUtil.getFontSize(18)}"
+					<s:Label id="time" text="2:07 PM" fontSize="{BasicUtil.getFontSize(18)}"
 							 styleName="viewheading"/>	
 				</s:HGroup>
 				<s:RichText id="txtMsg" width="100%" text="Hello World To"
