--- a/src/assets/images/CustomViewWithBackButtonAndSubTitleNormalSkin.mxml
+++ b/src/assets/images/CustomViewWithBackButtonAndSubTitleNormalSkin.mxml
@@ -22,7 +22,7 @@
 -->
 <s:Skin xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark" 
     xmlns:fb="http://ns.adobe.com/flashbuilder/2009" alpha.disabled="0.5"
-	height="100%" width="100%">
+	height="100%" width="100%" xmlns:components="com.fashionapp.views.components.*">
 	<fx:Metadata>[HostComponent("spark.components.View")]</fx:Metadata>
 
     <fx:Script fb:purpose="styling">
@@ -103,15 +103,16 @@
 						 width="100%"/>
 			</s:VGroup>
 			
-			<s:Image source="{BACK_ARROW}" scaleMode="stretch" height="{BasicUtil.getComponentHeight(30)}" width="{BasicUtil.getComponentHeight(17)}"
+			<components:ClickableImage source="{BACK_ARROW}" buttonMode="true"
+									   buttonHeight="{BasicUtil.getComponentHeight(30)}" buttonWidth="{BasicUtil.getComponentHeight(17)}"
 					 verticalCenter="0"
 					 click="{(this.hostComponent as View).navigator.popView()}"
-					 left="10"
-					 smooth="true"/>
-			<s:Image source="{OPEN_MENU}" scaleMode="stretch" height="{BasicUtil.getComponentHeight(15)}" width="{BasicUtil.getComponentHeight(30)}" verticalCenter="0"
+					 left="10"/>
+			<components:ClickableImage source="{OPEN_MENU}" buttonMode="true" buttonHeight="{BasicUtil.getComponentHeight(15)}" 
+									   buttonWidth="{BasicUtil.getComponentHeight(30)}" verticalCenter="0"
 					 click="{this.dispatchEvent(new Event('openMenuClicked',true))}"
 					 right="10"
-					 smooth="true"/>
+					/>
 		</s:BorderContainer>
 		<s:Group id="contentGroup" height="100%" width="100%" minWidth="0" minHeight="0">
 			<s:layout>
