--- a/src/assets/images/CustomViewWithBackButtonAndSubTitleSkin.mxml
+++ b/src/assets/images/CustomViewWithBackButtonAndSubTitleSkin.mxml
@@ -22,7 +22,7 @@
 -->
 <s:Skin xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark" 
     xmlns:fb="http://ns.adobe.com/flashbuilder/2009" alpha.disabled="0.5"
-	height="100%" width="100%">
+	height="100%" width="100%" xmlns:components="com.fashionapp.views.components.*">
 	<fx:Metadata>[HostComponent("spark.components.View")]</fx:Metadata>
 
     <fx:Script fb:purpose="styling">
@@ -62,7 +62,13 @@
                 
                 super.updateDisplayList(unscaledWidth, unscaledHeight);
             }
-        ]]>        
+			
+			protected function back_clickHandler(event:MouseEvent):void
+			{
+				this.dispatchEvent(new Event("backClicked",true));
+			}
+			
+		]]>        
     </fx:Script>
     
     <s:states>
@@ -103,15 +109,15 @@
 						 width="100%"/>
 			</s:VGroup>
 			
-			<s:Image source="{BACK_ARROW}" scaleMode="stretch" height="{BasicUtil.getComponentHeight(30)}" width="{BasicUtil.getComponentHeight(17)}"
+			<components:ClickableImage buttonMode="true" source="{BACK_ARROW}" 
+									   buttonHeight="{BasicUtil.getComponentHeight(30)}" buttonWidth="{BasicUtil.getComponentHeight(17)}"
 					 verticalCenter="0"
 					 click="{(this.hostComponent as View).navigator.popView()}"
-					 left="10"
-					 smooth="true"/>
-			<s:Image source="{OPEN_MENU}" scaleMode="stretch" height="{BasicUtil.getComponentHeight(15)}" width="{BasicUtil.getComponentHeight(30)}" verticalCenter="0"
+					 left="10"/>
+			<components:ClickableImage source="{OPEN_MENU}" buttonMode="true" buttonHeight="{BasicUtil.getComponentHeight(15)}" 
+									   buttonWidth="{BasicUtil.getComponentHeight(30)}" verticalCenter="0"
 					 click="{this.dispatchEvent(new Event('openMenuClicked',true))}"
-					 right="10"
-					 smooth="true"/>
+					 right="10"/>
 		</s:BorderContainer>
 		<s:Group id="contentGroup" height="100%" width="100%" minWidth="0" minHeight="0">
 			<s:layout>
@@ -127,7 +133,8 @@
 			<s:HGroup height="100%" width="100%" paddingLeft="{BasicUtil.getComponentPadding(10)}" paddingRight="{BasicUtil.getComponentPadding(10)}">
 				<s:Label width="100%" height="100%" verticalAlign="middle" textAlign="center" color="0xffffff" text="BACK"
 						 styleName="viewheader"
-						 fontSize="{BasicUtil.getFontSize(21)}"/>
+						 fontSize="{BasicUtil.getFontSize(21)}"
+						 click="back_clickHandler(event)"/>
 				<s:Label width="100%" height="100%" verticalAlign="middle" textAlign="center" color="0xffffff" styleName="viewheader"
 						 fontSize="{BasicUtil.getFontSize(21)}" text="SAVE"/>
 				<s:Label width="100%" height="100%" verticalAlign="middle" textAlign="center" color="0xffffff" styleName="viewheader"
