--- a/src/assets/images/CustomViewWithBackButtonSkin.mxml
+++ b/src/assets/images/CustomViewWithBackButtonSkin.mxml
@@ -22,7 +22,7 @@
 -->
 <s:Skin xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark" 
     xmlns:fb="http://ns.adobe.com/flashbuilder/2009" alpha.disabled="0.5"
-	height="100%" width="100%">
+	height="100%" width="100%" xmlns:components="com.fashionapp.views.components.*">
 	<fx:Metadata>[HostComponent("spark.components.View")]</fx:Metadata>
 
     <fx:Script fb:purpose="styling">
@@ -91,12 +91,12 @@
 					 maxDisplayedLines="1"
 					 styleName="viewtext"
 					 fontSize="{BasicUtil.getFontSize(36)}"/>
-			<s:Image source="{BACK_ARROW}" scaleMode="stretch" height="{BasicUtil.getComponentHeight(60)}" width="{BasicUtil.getComponentHeight(60)}"
+			<components:ClickableImage buttonMode="true" source="{BACK_ARROW}" buttonHeight="{BasicUtil.getComponentHeight(30)}" 
+									   buttonWidth="{BasicUtil.getComponentHeight(17)}"
 					 verticalCenter="0"
 					 click="{(this.hostComponent as View).navigator.popView()}"
 					 top="10"
-					 left="10"
-					 smooth="true"/>
+					 left="10"/>
 		</s:BorderContainer>
 		<s:Group id="contentGroup" height="100%" width="100%" minWidth="0" minHeight="0">
 			<s:layout>
