--- a/src/com/fashionapp/views/LoginView.mxml
+++ b/src/com/fashionapp/views/LoginView.mxml
@@ -33,19 +33,25 @@
 						 styleName="viewheading"/>
 			</s:VGroup>
 			<!-- com.fashionapp.skins.LoginTextInputSkin -->
-			<s:TextInput width="95%" prompt="{resourceManager.getString('resources','username')}"
-						
-						 id="txt_username"
-						 styleName="viewtext"
-						 fontSize="{BasicUtil.getFontSize(26)}"
-						 height="{BasicUtil.getComponentHeight(60)}"
-						 needsSoftKeyboard="true"/>
-			<s:TextInput width="95%" prompt="{resourceManager.getString('resources','password')}" displayAsPassword="true"
-						 id="txt_password"
-						 styleName="viewtext"
-						 fontSize="{BasicUtil.getFontSize(26)}"
-						 height="{BasicUtil.getComponentHeight(60)}"
-						 needsSoftKeyboard="true"/>
+			<s:Group>
+				<s:BorderContainer height="100%" width="100%" borderColor="0x696969">
+					<s:TextInput width="98%" prompt="{resourceManager.getString('resources','username')}"
+								 id="txt_username"
+								 fontSize="{BasicUtil.getFontSize(26)}"
+								 height="{BasicUtil.getComponentHeight(60)}"
+								 needsSoftKeyboard="true"/>		
+				</s:BorderContainer>
+			</s:Group>
+			<s:Group>
+				<s:BorderContainer height="100%" width="100%" borderColor="0x696969">
+				<s:TextInput width="95%" prompt="{resourceManager.getString('resources','password')}" displayAsPassword="true"
+							 id="txt_password"
+							 styleName="viewtext"
+							 fontSize="{BasicUtil.getFontSize(26)}"
+							 height="{BasicUtil.getComponentHeight(60)}"
+							 needsSoftKeyboard="true"/>
+				</s:BorderContainer>
+			</s:Group>
 			<s:VGroup width="100%" horizontalAlign="center"
 					  gap="25">
 				<s:Button label="{resourceManager.getString('resources','login')}" click="controller.doLogin(txt_username.text,txt_password.text)"
