--- a/src/com/fashionapp/views/TakePhotoView.mxml
+++ b/src/com/fashionapp/views/TakePhotoView.mxml
@@ -13,11 +13,8 @@
 	<s:Image height="100%" width="100%"/>
 	<s:BorderContainer width="100%" height="50" backgroundAlpha="0.6" 
 					   backgroundColor="0xffffff">
-		<s:TextInput skinClass="com.fashionapp.skins.ImageNameTextInputSkin" 
-					 width="100%" contentBackgroundAlpha="0" 
-					 height="100%"
-					 textAlign="center"
-					 focusAlpha="0"/>		
+		<s:TextInput width="100%" contentBackgroundAlpha="0" 
+					 height="100%"/>		
 	</s:BorderContainer>
 	<s:BorderContainer width="100%" height="50" 
 					   backgroundColor="0x000000">
