--- a/src/com/fashionapp/renderers/ReservedListItemCustomRenderer.mxml
+++ b/src/com/fashionapp/renderers/ReservedListItemCustomRenderer.mxml
@@ -2,7 +2,7 @@
 <s:ItemRenderer xmlns:fx="http://ns.adobe.com/mxml/2009" 
 					xmlns:s="library://ns.adobe.com/flex/spark"
 					color="{currentState == 'selected'?0xffffff:0x000000}"
-					autoDrawBackground="false">
+					autoDrawBackground="false" xmlns:components="com.fashionapp.views.components.*">
 	<fx:Script>
 		<![CDATA[
 			import com.fashionapp.utils.BasicUtil;
@@ -37,8 +37,9 @@
 		<s:HGroup width="100%" paddingRight="{BasicUtil.getComponentPadding(30)}"
 				  verticalAlign="middle"
 				  paddingLeft="{BasicUtil.getComponentPadding(30)}">
-			<s:Image height="{BasicUtil.getComponentHeight(110)}" width="{BasicUtil.getComponentHeight(110)}" 
-					 scaleMode="stretch" source="{PROD}"/>
+			<components:ImageViewer height="{BasicUtil.getComponentHeight(110)}" width="{BasicUtil.getComponentHeight(110)}" entityID="{data.entityID}"/>
+			<!--<s:Image height="{BasicUtil.getComponentHeight(110)}" width="{BasicUtil.getComponentHeight(110)}" 
+					 scaleMode="stretch" source="{PROD}"/>-->
 			<s:Spacer width="{BasicUtil.getComponentPadding(30)}"/>
 			<s:VGroup width="100%" gap="{BasicUtil.getComponentPadding(4)}"
 					  paddingTop="{BasicUtil.getComponentPadding(40)}">
