--- a/src/com/fashionapp/views/ReservedProductsDetailView.mxml
+++ b/src/com/fashionapp/views/ReservedProductsDetailView.mxml
@@ -5,7 +5,7 @@
 		title="{resourceManager.getString('resources','reservedproducts')}"
 		skinClass="assets.images.CustomViewWithBackButtonSkin" xmlns:skins="com.fashionapp.skins.*" 
 		xmlns:controllers="com.fashionapp.controllers.*"
-		creationComplete="view1_creationCompleteHandler(event)">
+		creationComplete="view1_creationCompleteHandler(event)" xmlns:components="com.fashionapp.views.components.*">
 	<fx:Script>
 		<![CDATA[
 			import com.fashionapp.events.ReservedProductDetailsListDataRefreshEvent;
@@ -25,6 +25,7 @@
 				this.addEventListener(ReservedProductDetailsListDataRefreshEvent.RESERVED_PRODUCT_DETAILS_LIST_DATA_REFRESH_EVENT,onViewChange);
 				controller.creationCompleteHandler();
 				controller.getReservedProductDetailViewData(data.entityID);
+				
 			}			
 			private function onBackClick(event:Event):void {
 				this.navigator.popView();
@@ -58,8 +59,7 @@
 					  verticalAlign="middle"
 					  paddingLeft="{BasicUtil.getComponentPadding(30)}"
 					  paddingBottom="{BasicUtil.getComponentPadding(40)}">
-				<s:Image height="{BasicUtil.getComponentHeight(110)}" width="{BasicUtil.getComponentHeight(110)}" 
-						 scaleMode="stretch" source="{PROD}"/>
+				<components:ImageViewer height="{BasicUtil.getComponentHeight(110)}" width="{BasicUtil.getComponentHeight(110)}" entityID="{data.entityID}"/>
 				<s:Spacer width="{BasicUtil.getComponentPadding(30)}"/>
 				<s:VGroup width="100%" gap="{BasicUtil.getComponentPadding(4)}"
 						  paddingTop="{BasicUtil.getComponentPadding(40)}">
